[gd_scene load_steps=18 format=1]

[ext_resource path="res://scripts/player.gd" type="Script" id=1]
[ext_resource path="res://picture/awewe0000.tex" type="Texture" id=2]
[ext_resource path="res://sounds/Alan Walker - Fade.ogg" type="AudioStream" id=3]
[ext_resource path="res://sounds/gun_sound.ogg" type="AudioStream" id=4]
[ext_resource path="res://sounds/empty_gun.ogg" type="AudioStream" id=5]
[ext_resource path="res://sounds/gun_reload.ogg" type="AudioStream" id=6]
[ext_resource path="res://instance/GUI.tscn" type="PackedScene" id=7]
[ext_resource path="res://picture/Untitled-1.tex" type="Texture" id=8]
[ext_resource path="res://picture/blood_splatter_transparency_by_sagacious-d3h1yw6.png" type="Texture" id=9]
[ext_resource path="res://Fonts/th_saraban_new_72.fnt" type="BitmapFont" id=10]
[ext_resource path="res://Fonts/th_saraban_new_46.fnt" type="BitmapFont" id=11]
[ext_resource path="res://instance/ShowScore.tscn" type="PackedScene" id=12]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 30.0199

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="OccluderPolygon2D" id=3]

closed = true
cull_mode = 0
polygon = Vector2Array( -27.5635, -25.7628, -10.6281, -38.3184, 2.80336, -39.1943, 25.5785, -26.0548, 29.3743, -10.8714, 27.9144, 4.89598, 20.0307, 13.9476, 9.22711, 19.4954, -8.00023, 20.6634, -19.9718, 11.9037, -29.0234, -0.0678329, -31.9433, -14.3753 )

[sub_resource type="Animation" id=4]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 0.9, 1 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -106.195, -10.0901 ), Vector2( 100.02, 3.67645 ), Vector2( -5.0383, -87.0724 ), Vector2( -3.6832, 90.5161 ), Vector2( -74.1735, -10.8663 ), Vector2( 75.7833, -8.04398 ), Vector2( -9.45511, -92.4215 ), Vector2( 11.9105, 83.5164 ), Vector2( 3.05176e-05, -18.4161 ), Vector2( -86.3387, 2.03258 ), Vector2( 0, 0 ) ]
}

[sub_resource type="StyleBoxFlat" id=5]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.156097, 0.218492, 0.726562, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[node name="player" type="KinematicBody2D" groups=[
"player",
]]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -2.64076, -6.95137 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

editor/display_folded = true
transform/pos = Vector2( -0.725275, 0.304368 )
transform/scale = Vector2( 1.13292, 1.06983 )
z/relative = false
texture = ExtResource( 2 )

[node name="Position2D" type="Position2D" parent="Sprite"]

editor/display_folded = true
transform/pos = Vector2( -0.487671, 74.6777 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Position2D"]

shape = SubResource( 2 )
trigger = false
_update_shape_index = -1

[node name="LightOccluder2D" type="LightOccluder2D" parent="Sprite"]

occluder = SubResource( 3 )
light_mask = 1

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.5
one_shot = true
autostart = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

visibility/visible = false
transform/pos = Vector2( -2.64076, -6.95137 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="bgm" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 3 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = true
stream/paused = true
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="gun" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 4 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="Camera2D" type="Camera2D" parent="."]

editor/display_folded = true
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = true
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera2D"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/shoot = SubResource( 4 )
playback/active = true
playback/speed = 3.0
blend_times = [  ]
autoplay = ""

[node name="gun_empty" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 5 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="reload" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 6 )
stream/play = false
stream/loop = false
stream/volume_db = 5.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="reload_bar" type="ProgressBar" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -70.0
margin/top = 49.0
margin/right = 53.0
margin/bottom = 65.0
custom_styles/fg = SubResource( 5 )
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 100.0
range/exp_edit = false
range/rounded = false
percent/visible = false

[node name="cl" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="GUI" parent="cl" instance=ExtResource( 7 )]

[node name="game_over" type="TextureFrame" parent="cl"]

visibility/visible = false
anchor/right = 1
anchor/bottom = 1
rect/scale = Vector2( 0.8, 0.85 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = -3.0
margin/right = -327.0
margin/bottom = -129.0
texture = ExtResource( 8 )
expand = true
stretch_mode = 0

[node name="blood" type="TextureFrame" parent="cl"]

visibility/opacity = 0.0
rect/scale = Vector2( 1.38, 0.94 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 742.0
margin/bottom = 643.0
texture = ExtResource( 9 )
stretch_mode = 3

[node name="blood_time" type="Timer" parent="cl"]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[node name="TryAgain" type="Button" parent="cl"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 310.0
margin/top = 620.0
margin/right = 549.0
margin/bottom = 679.0
custom_fonts/font = ExtResource( 10 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "TRY AGAIN"
flat = false

[node name="GoTitle" type="Button" parent="cl"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 640.0
margin/top = 620.0
margin/right = 1039.0
margin/bottom = 679.0
custom_fonts/font = ExtResource( 10 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Go To Main Menu"
flat = false

[node name="Score" type="Label" parent="cl"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 579.0
margin/top = 74.0
margin/right = 770.0
margin/bottom = 127.0
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
text = "Score : 0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Wave" type="Label" parent="cl"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 460.0
margin/top = 10.0
margin/right = 651.0
margin/bottom = 63.0
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
text = "Wave : 1"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Zombie" type="Label" parent="cl"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 700.0
margin/top = 10.0
margin/right = 939.0
margin/bottom = 63.0
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
text = "Zombie : 1"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="gun_stat" type="Control" parent="cl"]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="Upgrade" type="Label" parent="cl/gun_stat"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 8.0
margin/top = 189.0
margin/right = 122.0
margin/bottom = 223.0
custom_fonts/font = ExtResource( 11 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Upgrade Point : "
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Heal" type="Label" parent="cl/gun_stat"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 230.0
margin/right = 124.0
margin/bottom = 264.0
custom_fonts/font = ExtResource( 11 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Heal"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MoveSpeed" type="Label" parent="cl/gun_stat"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 280.0
margin/right = 172.0
margin/bottom = 314.0
custom_fonts/font = ExtResource( 11 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "MoveSpeed"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="FireRate" type="Label" parent="cl/gun_stat"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 330.0
margin/right = 124.0
margin/bottom = 364.0
custom_fonts/font = ExtResource( 11 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "FireRate"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ReloadSpeed" type="Label" parent="cl/gun_stat"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 390.0
margin/right = 124.0
margin/bottom = 424.0
custom_fonts/font = ExtResource( 11 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "ReloadSpeed: 0.01"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MagazineMax" type="Label" parent="cl/gun_stat"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 450.0
margin/right = 194.0
margin/bottom = 484.0
custom_fonts/font = ExtResource( 11 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "MagazineMax"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="p_heal" type="Button" parent="cl/gun_stat"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 276.0
margin/top = 230.0
margin/right = 307.0
margin/bottom = 270.0
custom_fonts/font = ExtResource( 11 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "+"
flat = false

[node name="p_move_speed" type="Button" parent="cl/gun_stat"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 276.0
margin/top = 280.0
margin/right = 307.0
margin/bottom = 320.0
custom_fonts/font = ExtResource( 11 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "+"
flat = false

[node name="p_fire_rate" type="Button" parent="cl/gun_stat"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 276.0
margin/top = 330.0
margin/right = 307.0
margin/bottom = 370.0
custom_fonts/font = ExtResource( 11 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "+"
flat = false

[node name="p_reload_speed" type="Button" parent="cl/gun_stat"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 276.0
margin/top = 380.0
margin/right = 307.0
margin/bottom = 420.0
custom_fonts/font = ExtResource( 11 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "+"
flat = false

[node name="p_magazine_max" type="Button" parent="cl/gun_stat"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 276.0
margin/top = 440.0
margin/right = 307.0
margin/bottom = 480.0
custom_fonts/font = ExtResource( 11 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "+"
flat = false

[node name="GodMode" type="Label" parent="cl"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 460.0
margin/top = 330.0
margin/right = 818.0
margin/bottom = 383.0
custom_fonts/font = ExtResource( 10 )
text = "God Mode = OFF"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="t_god_mode" type="Timer" parent="cl"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="ShowScore" parent="cl" instance=ExtResource( 12 )]

visibility/visible = false
margin/left = 260.0
margin/top = 140.0
margin/right = 300.0
margin/bottom = 180.0

[connection signal="pressed" from="cl/TryAgain" to="." method="_on_TryAgain_pressed"]

[connection signal="pressed" from="cl/GoTitle" to="." method="_on_GoTitle_pressed"]

[connection signal="pressed" from="cl/gun_stat/p_heal" to="." method="_on_p_heal_pressed"]

[connection signal="pressed" from="cl/gun_stat/p_move_speed" to="." method="_on_p_move_speed_pressed"]

[connection signal="pressed" from="cl/gun_stat/p_fire_rate" to="." method="_on_p_fire_rate_pressed"]

[connection signal="pressed" from="cl/gun_stat/p_reload_speed" to="." method="_on_p_reload_speed_pressed"]

[connection signal="pressed" from="cl/gun_stat/p_magazine_max" to="." method="_on_p_magazine_max_pressed"]

[connection signal="timeout" from="cl/t_god_mode" to="." method="_on_t_god_mode_timeout"]


